<resources>
    <string name="app_name">FragmentExercisesCallbackCommunicationRevisited</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">hello</string>
    <string name="word">word</string>
    <string name="word2">word2</string>
    <string name="word3">word3</string>
    <string name="word4">word4</string>
</resources>
